tests/src/frontend/typechecking/invalid/frozen_async_met_2.sk
mutable class Foo(mutable v: Foo) {
  async mutable fun no(): ^void {
    void
  }
}
